<?xml version="1.0"?>
<package format="3">
  <name>nlink_parser_ros2</name>
  <version>2.1.0</version>
  <description>The nlink parser package in ros2, used for products of nooploop</description>

  <maintainer email="aarush.gupta@hopetechnik.com">batman</maintainer>
  <maintainer email="nooploop.studio@gmail.com">Samuel Hsu</maintainer>


  <license>BSD</license>

  <url type="website">https://www.nooploop.com</url>
    <url type="website">https://www.hopetechnik.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>nlink_parser_ros2_interfaces</build_depend>
  <build_depend>serial</build_depend>
 
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nlink_parser_ros2_interfaces</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
