<?xml version="1.0"?>
<package format="3">
  <name>nlink_parser_ros2_interfaces</name>
  <version>2.1.0</version>
  <description>The nlink parser package in ros2, used for products of nooploop</description>

  <maintainer email="nooploop.studio@gmail.com">Samuel Hsu</maintainer>


  <license>BSD</license>
  <url type="website">https://www.nooploop.com</url>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
 
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>

  </export>
</package>
